outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval9141978714515696621_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance midway, and future distance is considered in later stages, with tie-breaking based on both centrality and future distance to ensure optimal balance between exploration and exploitation.}
                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance midway, and future distance is considered in later stages, with tie-breaking based on both centrality and future distance to ensure optimal balance between exploration and exploitation.}
                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'
